--- a/setup.cfg
+++ b/setup.cfg
@@ -84,7 +84,8 @@ max-line-length=79
 zip_ok = false
 
 [flake8]
-ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811
+# TODO: don't disable D*, fix up issues instead
+ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811,D1,D4
 max-line-length = 88
 
 [isort]
