Suppress deprecation about old version class used by gunicorn

--- a/setup.cfg
+++ b/setup.cfg
@@ -135,6 +135,7 @@ filterwarnings =
     ignore:Exception ignored in. <_io.FileIO .closed.>:pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception
     # Temporarily ignore warnings internal to Python 3.9.7, can be removed again in 3.9.8.
     ignore:The loop argument is deprecated since Python 3.8, and scheduled for removal in Python 3.10.:DeprecationWarning:asyncio
+    ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning::
 junit_suite_name = aiohttp_test_suite
 norecursedirs = dist docs build .tox .eggs
 minversion = 3.8.2
