Don't autoupgrade to typing-extensions==4.0.0

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,7 +19,7 @@ updates:
     open-pull-requests-limit: 10
     ignore:
       - dependency-name: "typing-extensions"
-        versions: ["^3.10.0"]
+        versions: ["^3.10.0", "^4.0"]
 
   # Maintain dependencies for GitHub Actions aiohttp 3.8
   - package-ecosystem: "github-actions"
@@ -42,7 +42,7 @@ updates:
     open-pull-requests-limit: 10
     ignore:
       - dependency-name: "typing-extensions"
-        versions: ["^3.10.0"]
+        versions: ["^3.10.0", "^4.0"]
 
   # Maintain dependencies for GitHub Actions aiohttp 3.8
   - package-ecosystem: "github-actions"
@@ -65,4 +65,4 @@ updates:
     open-pull-requests-limit: 10
     ignore:
       - dependency-name: "typing-extensions"
-        versions: ["^3.10.0"]
+        versions: ["^3.10.0", "^4.0"]
