--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -13,26 +13,15 @@ concurrency:
 
 jobs:
   # No compile-deps on cron job.
-  # Apply run to all active branches by keeping workflows like cron-38.yml etc.
+  # TODO: Apply run to all active branches by keeping workflows like cron-38.yml etc.
 
-  # TODO: replace to @master after the PR merging
   lint:
     name: Lint
-    uses: aio-libs/aiohttp/.github/workflows/lint.yml@0c8a36f3383a4b27ba2facda47944f314d0cf8c2
+    uses: aio-libs/aiohttp/.github/workflows/sub-lint.yml@master
     with:
       ref: ${{ env.ref }}
   test:
     name: Test
-    needs: lint
-    uses: aio-libs/aiohttp/.github/workflows/test.yml@0c8a36f3383a4b27ba2facda47944f314d0cf8c2
+    uses: aio-libs/aiohttp/.github/workflows/sub-test.yml@master
     with:
       ref: ${{ env.ref }}
-
-  check:  # This job does nothing and is only used for the branch protection
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Report success of the test matrix
-        run: >-
-          print("All's good")
-        shell: python
