--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -183,16 +183,18 @@ jobs:
         fail_ci_if_error: false
 
   check:  # This job does nothing and is only used for the branch protection
+    if: always()
+
     needs:
     - test
 
     runs-on: ubuntu-latest
 
     steps:
-      - name: Report success of the test matrix
-        run: >-
-          print("All's good")
-        shell: python
+    - name: Decide whether the needed jobs succeeded or failed
+      uses: re-actors/alls-green@release/v1
+      with:
+        jobs: ${{ toJSON(needs) }}
 
   pre-deploy:
     name: Pre-Deploy
