Drop meaningless test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,6 +167,8 @@ jobs:
       with:
         name: llhttp
         path: vendor/llhttp/build/
+    - name: Install dependencies
+        make install
     - name: Run unittests
       env:
         COLOR: 'yes'
