--- a/.github/workflows/post-dependabot.yml
+++ b/.github/workflows/post-dependabot.yml
@@ -17,9 +17,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2.4.0
+    - name: Generate Token
+      id: generate_token
+      uses: tibdex/github-app-token@v1
+      with:
+        app_id: ${{ secrets.BOT_APP_ID }}
+        private_key: ${{ secrets.BOT_PRIVATE_KEY }}
     - name: Login
       run: |
-        echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+        echo "${{ steps.generate_token.outputs.token }}" | gh auth login --with-token
     - name: Checkout
       run: |
         gh pr checkout ${{ github.event.pull_request.number }}
