--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,8 +18,6 @@ jobs:
     uses: aio-libs/aiohttp/.github/workflows/compile-deps.yml@master
     secrets:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # TODO: replace to @master after the PR merging
   lint:
     name: Lint
     needs: compile-deps
@@ -28,12 +26,12 @@ jobs:
     name: Test
     needs: compile-deps
     uses: aio-libs/aiohttp/.github/workflows/sub-test.yml@master
-
   check:  # This job does nothing and is only used for the branch protection
+    if: always()
     needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
-      - name: Report success of the test matrix
-        run: >-
-          print("All's good")
-        shell: python
+    - name: Decide whether the needed jobs succeeded or failed
+      uses: re-actors/alls-green@release/v1
+      with:
+        jobs: ${{ toJSON(needs) }}
