--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,12 +19,12 @@ jobs:
   test:
     name: Test
     uses: aio-libs/aiohttp/.github/workflows/test.yml@master
-
   check:  # This job does nothing and is only used for the branch protection
+    if: always()
     needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
-      - name: Report success of the test matrix
-        run: >-
-          print("All's good")
-        shell: python
+    - name: Decide whether the needed jobs succeeded or failed
+      uses: re-actors/alls-green@release/v1
+      with:
+        jobs: ${{ toJSON(needs) }}
