--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -25,24 +25,25 @@ jobs:
     needs: compile-deps
     uses: aio-libs/aiohttp/.github/workflows/sub-test.yml@master
   check:  # This job does nothing and is only used for the branch protection
+    if: always()
+    needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
-      - name: Report success of the test matrix
-        run: >-
-          print("All's good")
-        shell: python
-
+    - name: Decide whether the needed jobs succeeded or failed
+      uses: re-actors/alls-green@release/v1
+      with:
+        jobs: ${{ toJSON(needs) }}
   auto-merge:
     runs-on: ubuntu-latest
     needs: check
     steps:
-      - name: Dependabot metadata
-        id: metadata
-        uses: dependabot/fetch-metadata@v1.1.1
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Auto-merge if all checks has passed
-        run: gh pr merge --squash "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    - name: Dependabot metadata
+      id: metadata
+      uses: dependabot/fetch-metadata@v1.1.1
+      with:
+        github-token: "${{ secrets.GITHUB_TOKEN }}"
+    - name: Auto-merge if all checks has passed
+      run: gh pr merge --squash "$PR_URL"
+      env:
+        PR_URL: ${{github.event.pull_request.html_url}}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
