--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,11 @@ install_requires =
   frozenlist >= 1.1.1
   aiosignal >= 1.1.2
 
+[options.exclude_package_data]
+* =
+    *.c
+    *.h
+
 [options.extras_require]
 speedups =
   aiodns >= 1.1
@@ -71,7 +76,6 @@ exclude =
 # https://setuptools.readthedocs.io/en/latest/setuptools.html#options
 # (see notes for the asterisk/`*` meaning)
 * =
-#    *.c
     *.so
 
 [pep8]
