--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,11 +125,10 @@ jobs:
             pyver: 3.8
           - os: windows
             no-extensions: 'Y'
-        # pypy 3.7 exists in beta and doesn't work well yet
-        # include:
-        #   - pyver: pypy3
-        #     no-extensions: 'Y'
-        #     os: ubuntu
+        include:
+          - pyver: pypy-3.8
+            no-extensions: 'Y'
+            os: ubuntu
       fail-fast: true
     runs-on: ${{ matrix.os }}-latest
     steps:
