--- a/.mypy.ini
+++ b/.mypy.ini
@@ -35,6 +35,12 @@ ignore_missing_imports = True
 [mypy-gunicorn.*]
 ignore_missing_imports = True
 
+[mypy-proxy.*]
+ignore_missing_imports = True
+
+[mypy-re_assert.*]
+ignore_missing_imports = True
+
 [mypy-tokio]
 ignore_missing_imports = True
 
