Remove overlapping slots and fix broken slots inheritance (#6547)
* Remove overlapping slots, fix broken slots inheritance

* added "CHANGES" entry

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* fix refs in CHANGES

* added name to contributors

* extra clarification on CookieMixin __slots__ ignore

* add slotscheck to github CI workflow

* use "python -m" in slotscheck run to ensure aiohttp.worker module can be imported

* install base requirements for slotscheck in CI

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,9 +51,15 @@ jobs:
         python -m pip install .
       env:
         AIOHTTP_NO_EXTENSIONS: 1
-    - name: Run linters
+    - name: Run mypy
       run: |
         make mypy
+    - name: Run slotscheck
+      run: |
+        # Some extra requirements are needed to ensure all modules
+        # can be scanned by slotscheck.
+        pip install -r requirements/base.txt -c requirements/constraints.txt
+        slotscheck -v -m aiohttp
     - name: Install libenchant-dev
       run: |
         sudo apt install libenchant-dev
