--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -178,7 +178,7 @@ jobs:
       env:
         COLOR: 'yes'
         AIOHTTP_NO_EXTENSIONS: ${{ matrix.no-extensions }}
-        INSTALL_ARG: '--user'
+        PIP_USER: 1
       run: |
         make vvtest
         python -m coverage xml
