--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,13 +167,11 @@ jobs:
       with:
         name: llhttp
         path: vendor/llhttp/build/
-    - name: Install dependencies
-      run: |
-        make .develop
     - name: Run unittests
       env:
         COLOR: yes
         AIOHTTP_NO_EXTENSIONS: ${{ matrix.no-extensions }}
+        PIP_USER: 1
       run: |
         make vvtest
     #     python -m coverage xml
