--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,8 +136,15 @@ jobs:
         #   - pyver: pypy3
         #     no-extensions: 'Y'
         #     os: ubuntu
+        experimental: [false]
+        include:
+          - os: ubuntu
+            pyver: "3.11.0-alpha - 3.11.0"
+            experimental: true
+            no-extensions: 'Y'
       fail-fast: true
     runs-on: ${{ matrix.os }}-latest
+    continue-on-error: ${{ matrix.experimental }}
     steps:
     - name: Checkout
       uses: actions/checkout@v3
