--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,12 +124,18 @@ jobs:
             pyver: 3.8
           - os: windows
             no-extensions: 'Y'
+        experimental: [false]
         include:
           - pyver: pypy-3.8
             no-extensions: 'Y'
             os: ubuntu
+          - os: ubuntu
+            pyver: "3.11.0-alpha - 3.11.0"
+            experimental: true
+            no-extensions: 'Y'
       fail-fast: true
     runs-on: ${{ matrix.os }}-latest
+    continue-on-error: ${{ matrix.experimental }}
     steps:
     - name: Checkout
       uses: actions/checkout@v2.4.0
