Readd pypy to tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,6 +122,7 @@ jobs:
         pyver: [3.7, 3.8, 3.9, '3.10']
         no-extensions: ['', 'Y']
         os: [ubuntu, macos, windows]
+        experimental: [false]
         exclude:
           - os: macos
             no-extensions: 'Y'
@@ -131,13 +132,11 @@ jobs:
             pyver: 3.8
           - os: windows
             no-extensions: 'Y'
-        # pypy 3.7 exists in beta and doesn't work well yet
-        # include:
-        #   - pyver: pypy3
-        #     no-extensions: 'Y'
-        #     os: ubuntu
-        experimental: [false]
         include:
+          - pyver: pypy-3.8
+            no-extensions: 'Y'
+            os: ubuntu
+            experimental: false
           - os: ubuntu
             pyver: "3.11.0-alpha - 3.11.0"
             experimental: true
