--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,7 @@ jobs:
         pyver: [3.7, 3.8, 3.9, '3.10']
         no-extensions: ['', 'Y']
         os: [ubuntu, macos, windows]
+        experimental: [false]
         exclude:
           - os: macos
             no-extensions: 'Y'
@@ -129,8 +130,14 @@ jobs:
           - pyver: pypy-3.8
             no-extensions: 'Y'
             os: ubuntu
+            experimental: false
+          - os: ubuntu
+            pyver: "3.11.0-alpha - 3.11.0"
+            experimental: true
+            no-extensions: 'Y'
       fail-fast: true
     runs-on: ${{ matrix.os }}-latest
+    continue-on-error: ${{ matrix.experimental }}
     steps:
     - name: Checkout
       uses: actions/checkout@v3.0.2
