--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,6 @@ jobs:
 
   gen_llhttp:
     name: Generate llhttp sources
-    needs: lint
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -200,6 +199,7 @@ jobs:
     if: always()
 
     needs:
+    - lint
     - test
 
     runs-on: ubuntu-latest
