--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,6 @@ jobs:
 
   gen_llhttp:
     name: Generate llhttp sources
-    needs: lint
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
@@ -193,6 +192,7 @@ jobs:
     if: always()
 
     needs:
+    - lint
     - test
 
     runs-on: ubuntu-latest
