--- a/setup.cfg
+++ b/setup.cfg
@@ -51,9 +51,9 @@ install_requires =
   multidict >=4.5, < 7.0
   async_timeout >= 4.0, < 5.0
   asynctest == 0.13.0; python_version<"3.8"
-  yarl >= 1.0, < 2.0
+  yarl >= 1.8.1, < 2.0
   typing_extensions >= 3.7.4
-  frozenlist >= 1.1.1
+  frozenlist >= 1.3.1
   aiosignal >= 1.1.2
 
 [options.exclude_package_data]
@@ -65,7 +65,8 @@ install_requires =
 speedups =
   aiodns >= 1.1
   Brotli
-  cchardet
+  cchardet; python_version < '3.11'
+  cchardet @ git+https://github.com/PyYoshi/cChardet.git ; python_version >= '3.11'
 
 [options.packages.find]
 exclude =
