Stop installing cchardet speedup under >Python 3.9
`cchardet` stopped being maintained a while ago so this patch removes
it from the `speedups` extra to keep it helpful. It also makes the
same adjustment in the CI under the most recent CPython versions to
keep the testing going.

Refs:
* https://github.com/aio-libs/aiohttp/issues/6819#issuecomment-1181603136
* https://github.com/PyYoshi/cChardet/issues/77

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ install_requires =
 speedups =
   aiodns >= 1.1
   Brotli
-  cchardet
+  cchardet; python_version < "3.10"
 
 [options.packages.find]
 exclude =
