Ignore third-party deprecation warnings @ py311
Refs:
* https://github.com/benoitc/gunicorn/issues/2840
* https://github.com/certifi/python-certifi/pull/199

--- a/setup.cfg
+++ b/setup.cfg
@@ -139,6 +139,15 @@ filterwarnings =
     ignore:Exception ignored in. <_io.FileIO .closed.>:pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception
     ignore:The loop argument is deprecated:DeprecationWarning:asyncio
     ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning::
+    # The following deprecation warning is triggered by importing
+    # `gunicorn.util`. Hopefully, it'll get fixed in the future. See
+    # https://github.com/benoitc/gunicorn/issues/2840 for detail.
+    ignore:module 'sre_constants' is deprecated:DeprecationWarning:pkg_resources._vendor.pyparsing
+    # The deprecation warning below is happening under Python 3.11 and
+    # is fixed by https://github.com/certifi/python-certifi/pull/199. It
+    # can be dropped with the next release of `certify`, specifically
+    # `certify > 2022.06.15`.
+    ignore:path is deprecated. Use files.. instead. Refer to https.//importlib-resources.readthedocs.io/en/latest/using.html#migrating-from-legacy for migration advice.:DeprecationWarning:certifi.core
 junit_suite_name = aiohttp_test_suite
 norecursedirs = dist docs build .tox .eggs
 minversion = 3.8.2
