ignore the ResourceWarnings before they become unraisable exceptions

--- a/setup.cfg
+++ b/setup.cfg
@@ -132,11 +132,11 @@ addopts =
 filterwarnings =
     error
     ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
-    ignore:Exception ignored in. <function _SSLProtocolTransport.__del__ at.:pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception
-    ignore:Exception ignored in. <coroutine object BaseConnector.close at 0x.:pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception
-    ignore:Exception ignored in. <coroutine object ClientSession._request at 0x.:pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception
-    ignore:Exception ignored in. <function ClientSession.__del__ at 0x.:pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception
-    ignore:Exception ignored in. <_io.FileIO .closed.>:pytest.PytestUnraisableExceptionWarning:_pytest.unraisableexception
+    ignore:unclosed transport <_SSLProtocolTransport.*:ResourceWarning
+    ignore:coroutine 'BaseConnector.close' was never awaited:RuntimeWarning
+    ignore:coroutine 'ClientSession._request' was never awaited:RuntimeWarning
+    ignore:Unclosed client session <aiohttp.client.ClientSession object at 0x:ResourceWarning
+    ignore:unclosed file <_io.FileIO.*:ResourceWarning
     ignore:The loop argument is deprecated:DeprecationWarning:asyncio
     ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning::
     # The following deprecation warning is triggered by importing
