--- a/setup.cfg
+++ b/setup.cfg
@@ -132,7 +132,7 @@ addopts =
 filterwarnings =
     error
     ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
-    ignore:unclosed transport <_SSLProtocolTransport.*:ResourceWarning
+    ignore:unclosed transport <asyncio.sslproto._SSLProtocolTransport object at 0x.*:ResourceWarning
     ignore:coroutine 'BaseConnector.close' was never awaited:RuntimeWarning
     ignore:coroutine 'ClientSession._request' was never awaited:RuntimeWarning
     ignore:Unclosed client session <aiohttp.client.ClientSession object at 0x:ResourceWarning
