Move coverage conversion into a separate command
Being executed in the same step as `make vvtest` was suppressing the
failures from `pytest` replacing the status with the success of the
`coverage xml` invocation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -187,6 +187,11 @@ jobs:
         PIP_USER: 1
       run: |
         make vvtest
+    - name: Turn coverage into xml
+      env:
+        COLOR: 'yes'
+        PIP_USER: 1
+      run: |
         python -m coverage xml
     - name: Upload coverage
       uses: codecov/codecov-action@v3
