Move coverage conversion into a separate command
Being executed in the same step as `make vvtest` was suppressing the
failures from `pytest` replacing the status with the success of the
`coverage xml` invocation.

(cherry picked from commit 8fad9da8214bc5b29851d82526ce8b3039d44cdd)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,7 +173,12 @@ jobs:
         PIP_USER: 1
       run: |
         make vvtest
-    #     python -m coverage xml
+    - name: Turn coverage into xml
+      env:
+        COLOR: 'yes'
+        PIP_USER: 1
+      run: |
+        python -m coverage xml
     # - name: Upload coverage
     #   uses: codecov/codecov-action@v1
     #   with:
