Drop default fail_ci_if_error from codecov action
(cherry picked from commit a86e8e5fb396f488d504e826b26e6a675ed9c17e)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -186,12 +186,11 @@ jobs:
         PIP_USER: 1
       run: |
         python -m coverage xml
-    # - name: Upload coverage
-    #   uses: codecov/codecov-action@v1
-    #   with:
-    #     file: ./coverage.xml
-    #     flags: unit
-    #     fail_ci_if_error: false
+    - name: Upload coverage
+      uses: codecov/codecov-action@v3
+      with:
+        file: ./coverage.xml
+        flags: unit
 
   check:  # This job does nothing and is only used for the branch protection
     if: always()
