Add Python 3.11 under macos and windows to GHA
(cherry picked from commit ee4754dd33d894bf77d47d2629c5b57525ef8fbb)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,7 +130,15 @@ jobs:
             no-extensions: 'Y'
             os: ubuntu
             experimental: false
+          - os: macos
+            pyver: "3.11.0-alpha - 3.11.0"
+            experimental: true
+            no-extensions: 'Y'
           - os: ubuntu
+            pyver: "3.11.0-alpha - 3.11.0"
+            experimental: false
+            no-extensions: 'Y'
+          - os: windows
             pyver: "3.11.0-alpha - 3.11.0"
             experimental: true
             no-extensions: 'Y'
