Make user-installed pip binaries available in CI
(cherry picked from commit 52fa599c5637dd1a38761afb6829b0439b1cf505)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -188,7 +188,8 @@ jobs:
         AIOHTTP_NO_EXTENSIONS: ${{ matrix.no-extensions }}
         PIP_USER: 1
       run: |
-        make vvtest
+        PATH="${HOME}/.local/bin:${PATH}" make vvtest
+      shell: bash
     - name: Turn coverage into xml
       env:
         COLOR: 'yes'
