Suppress Protractor resource warning @ pytest
(cherry picked from commit f0d68e85ed7d98c3be084227b35ed1ae54130b0d)

--- a/setup.cfg
+++ b/setup.cfg
@@ -133,6 +133,7 @@ filterwarnings =
     error
     ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
     ignore:unclosed transport <asyncio.sslproto._SSLProtocolTransport object.*:ResourceWarning
+    ignore:unclosed transport <_ProactorSocketTransport closing fd=-1>:ResourceWarning
     ignore:Unclosed client session <aiohttp.client.ClientSession object at 0x:ResourceWarning
     ignore:The loop argument is deprecated:DeprecationWarning:asyncio
     ignore:Creating a LegacyVersion has been deprecated and will be removed in the next major release:DeprecationWarning::
