--- a/setup.cfg
+++ b/setup.cfg
@@ -133,6 +133,7 @@ filterwarnings =
     error
     ignore:module 'ssl' has no attribute 'OP_NO_COMPRESSION'. The Python interpreter is compiled against OpenSSL < 1.0.0. Ref. https.//docs.python.org/3/library/ssl.html#ssl.OP_NO_COMPRESSION:UserWarning
     ignore:unclosed transport <asyncio.sslproto._SSLProtocolTransport object.*:ResourceWarning
+    ignore:unclosed transport <_ProactorSocketTransport closing fd=-1>:ResourceWarning
     ignore:Unclosed client session <aiohttp.client.ClientSession object at 0x:ResourceWarning
     # Temporarily ignore warnings internal to Python 3.9.7, can be removed again in 3.9.8.
     ignore:The loop argument is deprecated since Python 3.8, and scheduled for removal in Python 3.10.:DeprecationWarning:asyncio
