Add macos Python 3.11 user-bin dir to `PATH` @ CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -193,8 +193,9 @@ jobs:
         COLOR: 'yes'
         AIOHTTP_NO_EXTENSIONS: ${{ matrix.no-extensions }}
         PIP_USER: 1
-      run: |
-        PATH="${HOME}/.local/bin:${PATH}" make vvtest
+      run: >-
+        PATH="${HOME}/Library/Python/3.11/bin:${HOME}/.local/bin:${PATH}"
+        make vvtest
       shell: bash
     - name: Turn coverage into xml
       env:
