Set Python 3.x in the wheels building jobs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -313,6 +313,8 @@ jobs:
       shell: bash
     - name: Setup Python
       uses: actions/setup-python@v4
+      with:
+        python-version: 3.x
     - name: Update pip, wheel, setuptools, build, twine
       run: |
         python -m pip install -U pip wheel setuptools build twine
